--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Validators\User\" />
+  </ItemGroup>
+
 </Project>
