--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\AnimalUserTests\CreateAnimalUsers\" />
+  </ItemGroup>
+
 </Project>
